VideoFrame buffer constructor doesn't respect codedWidth if visibleRect is present https://bugs.webkit.org/show_bug.cgi?id=256848 rdar://109724698

Reviewed by Eric Carlson.

Use codedWidth and codedHeight instead of parsedRect.
This is coherent with the rest of the algorithm like checking the array size and is consistent with what Chrome does.
I filed https://github.com/w3c/webcodecs/issues/702 to update the spec.

* LayoutTests/http/wpt/webcodecs/videoFrame-with-stride-expected.txt: Added.
* LayoutTests/http/wpt/webcodecs/videoFrame-with-stride.html: Added.
* Source/WebCore/Modules/webcodecs/WebCodecsVideoFrame.cpp:
(WebCore::WebCodecsVideoFrame::create):

Canonical link: https://commits.webkit.org/265844@main